--- a/package.json
+++ b/package.json
@@ -1,31 +1,42 @@
 {
-  "name": "react-native-bip39",
-  "version": "2.2.0",
+  "name": "@mfellner/react-native-bip39",
+  "version": "2.3.0",
   "license": "MIT",
   "description": "ReactNative-ready Bitcoin BIP39: Mnemonic code for generating deterministic keys",
-  "scripts": {
-    "test": "jest"
-  },
+  "repository": "http://github.com/mfellner/react-native-bip39",
+  "keywords": [
+    "bip39",
+    "mnemonic",
+    "react",
+    "native"
+  ],
   "author": "Alberto Dallaporta",
   "contributors": [
     "Maximilian Fellner <mail@mfellner.eu>"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/39otrebla/react-native-bip39"
+  "main": "dist/src/index.js",
+  "types": "dist/types.d.ts",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
+  "scripts": {
+    "test": "jest",
+    "build": "tsc -P tsconfig.build.json",
+    "clean": "rm -rf dist/"
   },
   "dependencies": {
-    "buffer": "6.0.3",
+    "buffer": "^6.0.3",
     "create-hash": "^1.2.0",
     "react-native-fast-crypto": "^2.2.0",
     "react-native-securerandom": "^1.0.0",
     "unorm": "^1.6.0"
   },
   "devDependencies": {
+    "@parcel/transformer-typescript-types": "2.4.1",
     "@types/create-hash": "1.2.2",
     "@types/jest": "27.4.1",
     "@types/proxyquire": "1.3.28",
-    "@types/react-native": "0.67.3",
     "@types/unorm": "1.3.28",
     "babel-jest": "27.5.1",
     "jest": "27.5.1",
