--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "test": "jest",
+    "typecheck": "tsc -P tsconfig.json --noEmit",
     "build": "tsc -P tsconfig.build.json",
     "clean": "rm -rf dist/"
   },
