--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "test": "jest",
     "typecheck": "tsc -P tsconfig.json --noEmit",
     "build": "tsc -P tsconfig.build.json",
-    "clean": "rm -rf dist/"
+    "clean": "rm -rf dist/",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    ".ts": "eslint --fix"
   },
   "dependencies": {
     "buffer": "^6.0.3",
@@ -39,8 +43,14 @@
     "@types/jest": "27.4.1",
     "@types/proxyquire": "1.3.28",
     "@types/unorm": "1.3.28",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
     "babel-jest": "27.5.1",
+    "eslint": "8.12.0",
+    "husky": "7.0.4",
     "jest": "27.5.1",
+    "jest-runner-eslint": "1.0.0",
+    "lint-staged": "12.3.7",
     "metro-react-native-babel-preset": "0.70.0",
     "react-native": "0.68.0",
     "tape": "5.5.2",
