--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "unorm": "^1.6.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "16.2.3",
+    "@commitlint/config-conventional": "16.2.1",
     "@parcel/transformer-typescript-types": "2.4.1",
     "@types/create-hash": "1.2.2",
     "@types/jest": "27.4.1",
