--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "contributors": [
     "Maximilian Fellner <mail@mfellner.eu>"
   ],
-  "main": "dist/src/index.js",
+  "module": "dist/src/index.js",
   "types": "dist/types.d.ts",
+  "files": [
+    "dist/",
+    "LICENSE"
+  ],
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
@@ -23,8 +27,10 @@
   "scripts": {
     "test": "jest",
     "typecheck": "tsc -P tsconfig.json --noEmit",
-    "build": "tsc -P tsconfig.build.json",
+    "release": "release-it",
     "clean": "rm -rf dist/",
+    "build": "tsc -P tsconfig.build.json",
+    "build:clean": "yarn clean && yarn build",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -40,10 +46,9 @@
   "devDependencies": {
     "@commitlint/cli": "16.2.3",
     "@commitlint/config-conventional": "16.2.1",
-    "@parcel/transformer-typescript-types": "2.4.1",
+    "@release-it/conventional-changelog": "4.2.2",
     "@types/create-hash": "1.2.2",
     "@types/jest": "27.4.1",
-    "@types/proxyquire": "1.3.28",
     "@types/unorm": "1.3.28",
     "@typescript-eslint/eslint-plugin": "5.18.0",
     "@typescript-eslint/parser": "5.18.0",
@@ -55,7 +60,7 @@
     "lint-staged": "12.3.7",
     "metro-react-native-babel-preset": "0.70.1",
     "react-native": "0.68.0",
-    "tape": "5.5.2",
+    "release-it": "14.14.1",
     "typescript": "4.6.3"
   }
 }
