--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "dist/",
-    "target": "ES6",
-    "module": "CommonJS",
+    "target": "es2017",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -10,6 +9,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "noEmitOnError": true
   }
 }
