--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mfellner/react-native-bip39",
-  "version": "2.2.0",
+  "version": "2.3.0-beta.0",
   "license": "MIT",
   "description": "ReactNative-ready Bitcoin BIP39: Mnemonic code for generating deterministic keys",
   "repository": "http://github.com/mfellner/react-native-bip39",
