--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@mfellner/react-native-bip39",
   "version": "2.3.0-beta.0",
-  "license": "MIT",
   "description": "ReactNative-ready Bitcoin BIP39: Mnemonic code for generating deterministic keys",
   "repository": "http://github.com/mfellner/react-native-bip39",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mfellner/react-native-bip39/issues"
+  },
+  "homepage": "https://github.com/mfellner/react-native-bip39#readme",
   "keywords": [
     "bip39",
     "mnemonic",
@@ -12,15 +16,18 @@
   ],
   "author": "Alberto Dallaporta",
   "contributors": [
-    "Maximilian Fellner <mail@mfellner.eu>"
+    "Maximilian Fellner <mail@mfellner.eu> (https://github.com/mfellner)"
   ],
-  "type": "module",
-  "main": "./dist/src/index.js",
-  "exports": "./dist/src/index.js",
-  "types": "./dist/src/index.d.ts",
+  "main": "dist/commonjs/index",
+  "module": "dist/module/index",
+  "types": "dist/typescript/src/index.d.ts",
+  "react-native": "src/index",
+  "source": "src/index",
   "files": [
     "dist/",
-    "LICENSE"
+    "src/",
+    "LICENSE",
+    "!*.py"
   ],
   "publishConfig": {
     "access": "public",
@@ -29,40 +36,76 @@
   "scripts": {
     "test": "jest",
     "typecheck": "tsc -P tsconfig.json --noEmit",
-    "release": "release-it",
     "clean": "rm -rf dist/",
-    "build": "tsc -P tsconfig.build.json",
-    "build:clean": "yarn clean && yarn build",
-    "prepare": "husky install"
+    "prepare": "husky install && bob build && cpy wordlists/ dist/",
+    "release": "release-it",
+    "example": "yarn --cwd example",
+    "pods": "cd example && pod-install --quiet",
+    "bootstrap": "yarn example && yarn && yarn pods"
   },
   "lint-staged": {
     ".ts": "eslint --fix"
   },
+  "peerDependencies": {
+    "@mfellner/react-native-fast-create-hash": "^1.0.0-alpha.2",
+    "react": "*",
+    "react-native": "*",
+    "react-native-fast-crypto": "^2.2.0",
+    "react-native-securerandom": "^1.0.0"
+  },
   "dependencies": {
     "buffer": "^6.0.3",
     "create-hash": "^1.2.0",
-    "react-native-fast-crypto": "^2.2.0",
-    "react-native-securerandom": "^1.0.0",
     "unorm": "^1.6.0"
   },
   "devDependencies": {
     "@commitlint/cli": "16.2.3",
     "@commitlint/config-conventional": "16.2.1",
+    "@mfellner/react-native-fast-create-hash": "^1.0.0-alpha.2",
     "@release-it/conventional-changelog": "4.2.2",
     "@types/create-hash": "1.2.2",
     "@types/jest": "27.4.1",
+    "@types/node": "16.11.26",
+    "@types/react": "17.0.43",
+    "@types/react-native": "0.67.4",
     "@types/unorm": "1.3.28",
     "@typescript-eslint/eslint-plugin": "5.18.0",
     "@typescript-eslint/parser": "5.18.0",
     "babel-jest": "27.5.1",
+    "commitlint": "16.2.3",
+    "cpy-cli": "4.1.0",
     "eslint": "8.12.0",
     "husky": "7.0.4",
     "jest": "27.5.1",
     "jest-runner-eslint": "1.0.0",
     "lint-staged": "12.3.7",
     "metro-react-native-babel-preset": "0.70.1",
+    "pod-install": "0.1.33",
+    "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-builder-bob": "0.18.2",
+    "react-native-fast-crypto": "^2.2.0",
+    "react-native-securerandom": "^1.0.0",
     "release-it": "14.14.1",
     "typescript": "4.6.3"
+  },
+  "resolutions": {
+    "@types/node": "16.11.26",
+    "@types/react": "17.0.43",
+    "@types/react-native": "0.67.4"
+  },
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "dist",
+    "targets": [
+      "commonjs",
+      "module",
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
+    ]
   }
 }
